--- a/src/Webdev/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Webdev/BlogBundle/Resources/views/layout.html.twig
@@ -2,14 +2,27 @@
 
 {% block body %}
 
-	<div>
-	
-		{% block content %}{% endblock %}
-	
-		<div style="float: right; border: 1px solid;">
-			<p>Menü</p>
-		</div>
-		
+	<div id="blog_sidebar" class="right">
+		<p>Projekte</p>
+		<hr/>
+		<ul>
+			<li><a href="">Lorem Ipsum</a></li>
+			<li><a href="">Lorem Ipsum dolor</a></li>
+		</ul>
+		<p>Archiv</p>
+		<hr/>
+		<ul>
+			<li><a href="">Lorem Ipsum</a></li>
+			<li><a href="">Lorem Ipsum dolor</a></li>
+		</ul>
+		<p>Blogroll</p>
+		<hr/>
+		<ul>
+			<li><a href="">Lorem Ipsum</a></li>
+			<li><a href="">Lorem Ipsum dolor</a></li>
+		</ul>
 	</div>
 
-{%  endblock %}
+	{% block content %}{% endblock %}
+
+{% endblock %}
