--- a/src/Webdev/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Webdev/BlogBundle/Resources/views/layout.html.twig
@@ -26,3 +26,19 @@
 	{% block content %}{% endblock %}
 
 {% endblock %}
+
+{% block stylesheets %}
+
+	{{ parent() }}
+	
+	{% stylesheets
+		'@WebdevBlogBundle/Resources/public/css/layout.css'
+		output='resources/compiled/layout.css'
+		filter='yui_css'
+	%}
+			
+		<link href="{{ asset_url }}" rel="stylesheet" type="text/css">
+			
+	{% endstylesheets %}
+
+{% endblock %}
