--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -5,5 +5,5 @@
 	<h2>Seite nicht gefunden</h2>
 	<pre>Fehlermeldung: {{ exception.message }}</pre>
 
-	<p>Bitte überprüf die angegebene URL!</p>
+	<p>Bitte überprüfe die eingegebene URL</p>
 {% endblock %}
