--- a/src/Webdev/BlogBundle/Resources/public/css/post/view.css
+++ b/src/Webdev/BlogBundle/Resources/public/css/post/view.css
@@ -1,5 +1,5 @@
 /*
- * blog post meta
+ * meta data
  */
 div#blog_post_metadata
 {
@@ -28,15 +28,49 @@ div#blog_post_metadata ul
 	padding-left: 15px;
 }
 
-
 /*
- * blog post
+ * tags
  */
-p#blog_post_tags
+div#blog_post_tags
 {
+	display: block;
 	font-style: italic;
 }
 
+div#blog_post_tags ul
+{
+	display: inline;
+	padding: 0;
+	list-style-type: none;
+}
+
+div#blog_post_tags ul li
+{
+	display: inline;
+	margin-left: 5px;
+}
+
+div#blog_post_comment_new
+{
+	border: 1px solid grey;
+	padding: 5px;
+	text-align: center;
+	font-style: italic;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+/*
+ * content
+ */
+div#blog_post_content
+{
+	padding-top: 10px;
+}
+
+/*
+ * comments
+ */
 div#blog_post_comment_new
 {
 	border: 1px solid grey;
