--- a/src/Webdev/BlogBundle/Resources/views/Post/view.html.twig
+++ b/src/Webdev/BlogBundle/Resources/views/Post/view.html.twig
@@ -35,9 +35,17 @@
 	</div>
 
 	<h2 class="no_margin">{{ post.title }}</h2>
-	<p id="blog_post_tags" class="small no_margin">Tags: <a href="">Lorem</a>, <a href="">Ipsum</a>, <a href="">dolor</a></p>
-	{{ post.content | raw }}
-	
+	<div id="blog_post_tags">
+		<p class="small no_margin left">Tags:</p>
+			<ul class="small no_margin left">
+				<li><a href="">Lorem</a></li>
+				<li><a href="">Ipsum</a></li>
+				<li><a href="">dolor</a></li>
+			</ul>
+	</div>
+	<div id="blog_post_content">
+		{{ post.content | raw }}
+	</div>
 	<h3 class="no_margin clear">Kommentare</h3>
 	<hr class="no_margin"/>
 	<div id="blog_post_comment_new">
