--- a/src/Webdev/BlogBundle/Resources/views/layout.html.twig
+++ b/src/Webdev/BlogBundle/Resources/views/layout.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
 
 	<div id="blog_sidebar" class="right">
+		{% render 'WebdevBlogBundle:Sidebar:tagcloud' %}
 		<p>Projekte</p>
 		<hr/>
 		<ul>
