--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,6 +33,9 @@
 					<li><a href="">Twitter</a></li>
 					<li><a href="">GitHub</a></li>
 					<li><a href="">Impressum</a></li>
+					{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+						<li><a href="{{ path('logout') }}">Logout</a></li>
+					{% endif %}
 				</ul>
 			</div>
 			<div id="body">
