--- a/src/Webdev/BlogBundle/Resources/views/Post/view.html.twig
+++ b/src/Webdev/BlogBundle/Resources/views/Post/view.html.twig
@@ -51,7 +51,7 @@
 	<h3 class="no_margin clear">Kommentare</h3>
 	<hr class="no_margin"/>
 	<div id="blog_post_comment_new">
-		<p>Wenn du auch einen Kommentar schreiben möchtest, melde dich bitte <a href="">hier</a> an.</p>
+		<p>Wenn du auch einen Kommentar schreiben möchtest, melde dich bitte <a href="{{ path('login') }}">hier</a> an.</p>
 	</div>
 	<div class="blog_post_comment">
 		<p class="blog_post_comment_header">Max Mustermann am 30.10.2011 um 19:05 Uhr (3 Antworten) | <a href="">Antworten ausblenden</a></p>
