--- a/web/resources/css/base.css
+++ b/web/resources/css/base.css
@@ -59,9 +59,10 @@ div#header
 
 div#header_font_size
 {
-	padding: 0;
 	position: absolute;
 	left: 0;
+	top: 0;
+	padding: 0;
 	font-size: 12px;
 }
 
@@ -70,35 +71,42 @@ div#header_font_size a
 	margin-right: 5px;
 }
 
+div#header_accountbox
+{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	font-size: 12px;
+}
+
 ul#header_links
 {
 	list-style-type: none;
 	padding: 0;
 	position: absolute;
 	right: 0;
+	top:0;
 	font-size: 12px;
 }
 
 div#header_text
 {
 	margin: 0 auto;
-	width: 580px;
+	text-align: center;
+    width: 325px;
 }
 
 div#header_text h1
 {
-	margin-top: 10px;
-	margin-bottom: 15px;
-	margin-right: 15px;
 	font-size: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 div#header_text p
 {
-	margin-top: 12px;
-	margin-bottom: 0;
+	margin-bottom: 5px;
 	font-size: 15px;
-	width: 350px;
 }
 
 /*
