--- a/src/Webdev/BlogBundle/Resources/public/css/post/view.css
+++ b/src/Webdev/BlogBundle/Resources/public/css/post/view.css
@@ -50,16 +50,6 @@ div#blog_post_tags ul li
 	margin-left: 5px;
 }
 
-div#blog_post_comment_new
-{
-	border: 1px solid grey;
-	padding: 5px;
-	text-align: center;
-	font-style: italic;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
 /*
  * content
  */
@@ -76,7 +66,6 @@ div#blog_post_comment_new
 	border: 1px solid grey;
 	padding: 5px;
 	text-align: center;
-	font-style: italic;
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
@@ -95,6 +84,7 @@ div.blog_post_comment_answer
 	margin-left: 30px;
 	margin-top: 15px;
 	margin-bottom: 10px;
+	display: none;
 }
 
 p.blog_post_comment_header
@@ -107,5 +97,6 @@ p.blog_post_comment_header
 p.blog_post_comment_body
 {
 	margin: 0;
+	padding-top: 5px;
 	padding-bottom: 5px;
 }
